Colaboratory를 통해 생성됨

--- a/desicion_tree.ipynb
+++ b/desicion_tree.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "desicion_tree.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM1SQ8RjlyVNdwX4Ivzgx0y",
+      "authorship_tag": "ABX9TyPMzeEnDlXaVN3OPQrhkd4p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,6 +177,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WU4ApssIKnUi"
+      },
+      "source": [
+        "# Desicion Tree"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "BVBL7jA6HMsi"
@@ -185,6 +194,17 @@
         "model = tree.DecisionTreeClassifier()"
       ],
       "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jSq_B7d-Kppw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,9 +310,79 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OfjQAtteKr2Z"
+      },
+      "source": [
+        "# Random Forest"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ucDrjqIwH6vN"
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "94lrBQM1KyxH"
+      },
+      "source": [
+        "rf_model = RandomForestClassifier(n_estimators=10,max_depth=4, random_state=0)"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IKIxteC0K2XV"
+      },
+      "source": [
+        "rf_model=rf_model.fit(x,y)"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rwKEe-xrK40l",
+        "outputId": "a1c26bf8-297c-463e-b370-5603c070797d"
+      },
+      "source": [
+        "rf_model.predict([x[0],x[100]])"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OKEFhd8NK-e8"
       },
       "source": [
         ""
